--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:sgG/2JKBE5xObpAiCSsWeZdDiC5KUdee4m7BePXpJuU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
